--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,9 @@
    font-family: 'DM Sans', sans-serif;
 }
 
+:root {
+    --azulado: #3ea2e4;
+}
 
 .navbar-brand img {
     height: 2em;
@@ -15,17 +18,24 @@
 
 }
 
-.navbar-inner {
-    background:transparent;
+
+.navbar {
+    background-color: rgba(236, 236, 236, 0.215);
 }
 
-.carousel-inner img {
-    height: auto;
-    width: auto;
+
+.carousel-item {
+    height: 100em;
+}
+
+.carousel-item img {
+    object-fit: cover;
+
 }
    
 #texto {
     background-color: black;
+    color: white;
 }
 
 #texto h1 {
@@ -33,19 +43,10 @@
     letter-spacing: 1px;
 }
 
-.columnas-texto {
-  width: 1366px;
-  height: 768px;
-  display: grid;
-  grid-template-rows: repeat(2, 30%);
-  grid-template-columns: repeat(3, 1fr);
-  gap: 8px;
-text-align: center;
-color: white;
-}
-
-.iconos {
-    background-color: aquamarine;
+.icono-quienes-somos {
+    background-color: var(--azulado);
+    font-size: 25px;
+    text-align: center;
 }
 
 .form {
@@ -53,7 +54,18 @@ color: white;
 }
 
 footer {
-    background-color: aqua;
+    background-color: var(--azulado);
     color: white;
-    display: inline-flex;
+    display: flex;
+    justify-content: space-around;
+}
+
+.links-footer i{
+    text-decoration: none;
+    color: white;
+}
+
+#btn {
+    background-color: var(--azulado);
+    color: white;
 }
