--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,15 +23,11 @@
     background-color: rgba(236, 236, 236, 0.215);
 }
 
-
-.carousel-item {
-    height: 100em;
+.carousel-inner img {
+  max-width: 100%;
+  max-height: 100%;
 }
 
-.carousel-item img {
-    object-fit: cover;
-
-}
    
 #texto {
     background-color: black;
@@ -48,6 +44,17 @@
     font-size: 25px;
     text-align: center;
 }
+
+#cont-foto {
+    background-color: var(--azulado);
+    color: white;
+}
+
+.card-img-top {
+    height: 200px; 
+    object-fit: cover;
+}
+
 
 .form {
     color: white;
