La seccion QUIENES SOMOS se configuro igual como en la maqueta y se anadio la propiedad para que desaprazca en pantalla pequenas. Se agrego un TOOLTIP para el BOTON de ENVIAR en el formulario y en cada uno de los ICONS del FOOTER. Ademas el BOTON de ENVIAR cuenta con un ALERT que se ejecuta al usuario hacer click sobre el. Se ajustaron las etiquetas, se utilizo semantica de acuerdo el requerimiento de la prueba. Elemntos BOOTSTRAP utilizados TOOLTIP, FORM, CAROUSEL, NAVBAR, CARDS. Ademas se ajusto el orden de los Scripts de JQUERY, BOOTSTRAP y HOJA de Script, dejando la hoja de ultima ya que estando primera las acciones de Js no se ejecutaban correctamente

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,15 @@
 
 * {
    font-family: 'DM Sans', sans-serif;
+    scroll-behavior: smooth;
 }
 
 :root {
-    --azulado: #3ea2e4;
+    --verdebonito: #14834b;
 }
 
+
+/* navbar */
 .navbar-brand img {
     height: 2em;
     vertical-align: middle;
@@ -14,21 +17,17 @@
 
 .navbar-brand {
     font-weight: bold;
-    vertical-align: middle;
-
 }
 
 
-.navbar {
-    background-color: rgba(236, 236, 236, 0.215);
-}
-
+/* carousel */
 .carousel-inner img {
   max-width: 100%;
   max-height: 100%;
 }
 
-   
+
+/* quienes somos */
 #texto {
     background-color: black;
     color: white;
@@ -40,13 +39,14 @@
 }
 
 .icono-quienes-somos {
-    background-color: var(--azulado);
+    background-color: var(--verdebonito);
     font-size: 25px;
     text-align: center;
 }
 
+/* destacados */
 #cont-foto {
-    background-color: var(--azulado);
+    background-color: var(--verdebonito);
     color: white;
 }
 
@@ -56,12 +56,21 @@
 }
 
 
+/* form */
 .form {
     color: white;
 }
 
+#btn {
+    background-color: var(--verdebonito);
+    color: white;
+}
+
+
+
+/* foter */
 footer {
-    background-color: var(--azulado);
+    background-color: var(--verdebonito);
     color: white;
     display: flex;
     justify-content: space-around;
@@ -69,10 +78,5 @@ footer {
 
 .links-footer i{
     text-decoration: none;
-    color: white;
-}
-
-#btn {
-    background-color: var(--azulado);
     color: white;
 }
