--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@
 
 
 /* navbar */
+
 .navbar-brand img {
     height: 2em;
     vertical-align: middle;
@@ -19,21 +20,29 @@
     font-weight: bold;
 }
 
-
-/* carousel */
-.carousel-inner img {
-  max-width: 100%;
-  max-height: 100%;
+.navbar {
+    background-color: rgba(0, 0, 0, 0.139);
 }
 
 
+
+
+
+/* carousel */
+.carousel-item img {
+  max-height: 100vh;
+}
+
+
+
+
 /* quienes somos */
-#texto {
+#color-back-font {
     background-color: black;
     color: white;
 }
 
-#texto h1 {
+#color-back-font h1 {
     color: white;
     letter-spacing: 1px;
 }
